# agentcfg

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UBIQUITOUS-LANGUAGE.md  prek.toml
.cline/skills/: do-code-review  do-code-review-fix  do-execution-report  do-grill-with-docs  do-plan-adherence-review  do-plan-execution
.clinerules/workflows/: do-design-pass.md  do-design-review.md  do-issue-fix.md  do-mr-review.md  do-plan-adherence-review.md
.cursor/commands/: do-code-review.md  do-execution-report.md  do-feature-plan-lite.md  do-feature-plan.md  do-improve-codebase-architecture.md
.cursor/plans/: m1.5.0-preview-rename.md  m1.5.1-apply-rename.md  m1.5.2-config-layer-install-level.md  m1.5.3-discovery-artifact-requirement-terms.md  m1.5.5-desired-state-lockfile-manifest-managed-state.md  m1.5.6-status-prune-safety-terminology.md  m1.5.7-downstream-milestone-wording.md  m2.1-path-skill-source-discovery.md
.cursor/skills/: do-design-pass  do-design-review  (+8 more)
crates/agentcfg-cli/: Cargo.toml
crates/agentcfg-cli/src/: args.rs  clients.rs  commands.rs  error.rs  main.rs  render.rs
crates/agentcfg-cli/tests/: cli_contract.rs  clients.rs  clients_mutation.rs  clients_show.rs  config_show.rs  init.rs  invalid_usage.rs  project_root.rs  skills.rs  unimplemented_workflows.rs
do-feature-plan/: SKILL.md
do-grill-with-docs/: SKILL.md
do-mr-fix/: SKILL.md
do-plan-adherence-review/: SKILL.md
do-system-review/: SKILL.md
docs/: UBIQUITOUS_LANGUAGE.md  design-v1.md  implementation-plan-v1.md  prd.md
scripts/: validate-all.sh
(+131 files in other folders)
