[package]
name = "agentcfg-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "agentcfg"
path = "src/main.rs"

[dependencies]
agentcfg-core = { path = "../agentcfg-core" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
